name:          hsbank
version:       1.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          hsbank
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    other-modules:  Accounts
                  , Transactions
    build-depends:  base   >= 4      && < 5
                  , yaml
                  , wreq
                  , lens
                  , filepath
                  , aeson
                  , lens-aeson
                  , text
                  , text-format
                  , bytestring
                  , time
                  , uri-encode
